logs/Slang/chapter-7/arrays/associative/methods/traversal.sv.log
name: associative-arrays-arg-traversal
description: Test support of associative arrays methods
should_fail: 0
tags: 7.9.8 7.9
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/methods/traversal.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/methods/traversal.sv:9:13: error: expected expression
string map[ int ];
            ^~~
